[package]
name = "bgp_stream"
version = "0.1.0"
edition = "2021"


[dependencies]
bytes = "1.2.1"
byteorder = "1.4.3"
num_cpus = "1.13.1"
bgp-rs = "0.6.0"
bitflags = "1.3.2"
num-traits = "0.2.15"
num-derive = "0.3.3"
bgp-models = "0.8.0"

flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
