[package]
name = "bgp_stream"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde/derive"]

[dependencies]
bytes = "1.2.1"
byteorder = "1.4.3"
num_cpus = "1.13.1"
bgp-rs = "0.6.0"
bitflags = "1.3.2"
num-traits = "0.2.15"
num-derive = "0.3.3"
bgp-models = "0.8.0"
ipnetwork = "0.18.0"
dotenv = "0.15.0"
ureq = "2.5.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"

chrono = "0.4.22"

bgpkit-parser = { path = "../bgpkit-parser", default-features = false }

serde_json = "1.0.85"
serde = "1.0.145"

rayon = "1.5.3"
itertools = "0.10.5"


flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
